--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="#">Resume</a>
+            <a class="header__resume btn" href="https://drive.google.com/file/d/1Rj_iSw1OYIh47x3PZTG4ab2Z5rPiC0hP/view?usp=sharing">Resume</a>
           </li>
         </ul>
         <button aria-label="mobile nav button" class="header__bars">
